tests/models/u128/fail/min_items.rs
use dade::model;
#[model]
struct TestModel {
    #[field(min_items = 2)]
    value: u128,
}
fn main() {}
